
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char const* LPTSTR ;
typedef scalar_t__ DWORD ;


 int FORMAT_MESSAGE_ALLOCATE_BUFFER ;
 int FORMAT_MESSAGE_FROM_SYSTEM ;
 int FormatMessage (int,int *,scalar_t__,int ,char const*,int ,int *) ;
 int GetStdHandle (int ) ;
 int LANG_NEUTRAL ;
 int LocalFree (char const*) ;
 int MAKELANGID (int ,int ) ;
 int STD_OUTPUT_HANDLE ;
 int SUBLANG_DEFAULT ;
 int WriteFile (int ,char const*,int ,scalar_t__*,int *) ;
 int strlen (char const*) ;

void ErrorTrace(const char *msg, DWORD error)
{
 DWORD numWritten;

 WriteFile( GetStdHandle(STD_OUTPUT_HANDLE), msg, strlen(msg), &numWritten, ((void*)0));
 if (error) {
  LPTSTR lpMsgBuf;

  FormatMessage(
   FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_SYSTEM,
   ((void*)0),
   error,
   MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT),
   (LPTSTR) &lpMsgBuf,
   0,
   ((void*)0)
  );
  WriteFile( GetStdHandle(STD_OUTPUT_HANDLE), lpMsgBuf, strlen(lpMsgBuf), &numWritten, ((void*)0));

  LocalFree( lpMsgBuf );
 }
}
