; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_21685.c_ErrorTrace.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_21685.c_ErrorTrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STD_OUTPUT_HANDLE = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_ALLOCATE_BUFFER = common dso_local global i32 0, align 4
@FORMAT_MESSAGE_FROM_SYSTEM = common dso_local global i32 0, align 4
@LANG_NEUTRAL = common dso_local global i32 0, align 4
@SUBLANG_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ErrorTrace(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @STD_OUTPUT_HANDLE, align 4
  %8 = call i32 @GetStdHandle(i32 %7)
  %9 = load i8*, i8** %3, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = call i32 @WriteFile(i32 %8, i8* %9, i32 %11, i64* %5, i32* null)
  %13 = load i64, i64* %4, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %33

15:                                               ; preds = %2
  %16 = load i32, i32* @FORMAT_MESSAGE_ALLOCATE_BUFFER, align 4
  %17 = load i32, i32* @FORMAT_MESSAGE_FROM_SYSTEM, align 4
  %18 = or i32 %16, %17
  %19 = load i64, i64* %4, align 8
  %20 = load i32, i32* @LANG_NEUTRAL, align 4
  %21 = load i32, i32* @SUBLANG_DEFAULT, align 4
  %22 = call i32 @MAKELANGID(i32 %20, i32 %21)
  %23 = bitcast i8** %6 to i8*
  %24 = call i32 @FormatMessage(i32 %18, i32* null, i64 %19, i32 %22, i8* %23, i32 0, i32* null)
  %25 = load i32, i32* @STD_OUTPUT_HANDLE, align 4
  %26 = call i32 @GetStdHandle(i32 %25)
  %27 = load i8*, i8** %6, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @strlen(i8* %28)
  %30 = call i32 @WriteFile(i32 %26, i8* %27, i32 %29, i64* %5, i32* null)
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @LocalFree(i8* %31)
  br label %33

33:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @WriteFile(i32, i8*, i32, i64*, i32*) #1

declare dso_local i32 @GetStdHandle(i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @FormatMessage(i32, i32*, i64, i32, i8*, i32, i32*) #1

declare dso_local i32 @MAKELANGID(i32, i32) #1

declare dso_local i32 @LocalFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
